@startuml

title __MODEL's Class Diagram__\n

  namespace com.model {
    class com.model.Reservation {
        - dateDebut : Date
        - dateFin : Date
        - heureDebut : LocalTime
        - heureFin : LocalTime
        + Reservation()
        + getDateDebut()
        + getDateFin()
        + getHeureDebut()
        + getHeureFin()
        + getSalle()
        + getUtilisateur()
        + setDateDebut()
        + setDateFin()
        + toString()
    }
  }
  

  namespace com.model {
    class com.model.Salle {
        - id : int
        - nomSalle : String
        + Salle()
        + Salle()
        + getId()
        + getNomSalle()
    }
  }
  

  namespace com.model {
    class com.model.Utilisateur {
        - mail : String
        - motdepasse : String
        - nom : String
        - prenom : String
        - reservations : List<Reservation>
        + Utilisateur()
        + Utilisateur()
        + addReservation()
        + deleteReservation()
        + getMail()
        + getMotdepasse()
        + getNom()
        + getPrenom()
        + getReservations()
        + getSalle()
        + setMail()
        + setNom()
        + setPrenom()
        + setReservations()
    }
  }
  

  namespace com.model {
    abstract class com.model.Utils {
        {static} - connection : Connection
        {static} - lastMail : String
        {static} - properties : Properties
        {static} + connectUser()
        {static} + connection()
        {static} + getAllReservations()
        {static} + getLastMail()
        {static} + getPassword()
        {static} + getProperties()
        {static} + getReservations()
        {static} + getSalle()
        {static} + getSalles()
        {static} + hashPassword()
        {static} + registerUser()
        {static} + validMail()
        {static} ~ addReservation()
        {static} ~ annulerReservationSalle()
        {static} - addReservations()
        {static} - getSalle()
        {static} - reserveSalle()
    }
  }
  

  com.model.Reservation o-- com.model.Salle : salle
  com.model.Reservation o-- com.model.Utilisateur : utilisateur


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
